Complete support for timer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(SRCS
     Channel.cc
+    EventLoop.cc
     IPoller.cc
     Poller.cc
     Epoller.cc
-    EventLoop.cc
+    Timer.cc
+    TimeQueue.cc 
     #EventLoopThread.cc
     #EventLoopThreadPool.cc
     #HttpData.cc
