add Server with HeartBeat in application layer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SRCS
     Acceptor.cc
     EventLoopThreadPool.cc
     Server.cc
+    serverWithHeartBeat.cc
     Connection.cc
     Buffer.cc
 )
