--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SRCS
     Connector.cc
     Client.cc
 )
+include_directories(${PROJECT_SOURCE_DIR})
 add_definitions(-std=c++11)
 include_directories(${PROJECT_SOURCE_DIR}/base)
 
